# smPy

./: README.md  pyproject.toml  setup.py
src/smPy/: __init__.py  main.py  smpy.py  utils.py
src/smPy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
