[build-system]
requires = [
  "setuptools>=42",
  "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "smPy"
version = "0.0.1"
authors = [
  { name="Lily Anderson", email="lily.jian.hua.anderson@gmail.com" },
]
description = "An all-in-one software package for the analysis and visualisation of single molecule images"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

dependencies = [
  "numpy>=1.21",
  "opencv-python>=4.5",
  "matplotlib>=3.5",
  "scikit-image>=0.18",
  "Pillow>=8.0",  
]

[project.urls]
Homepage = "https://github.com/ljhason/smPy"
Guide = "https://github.com/ljhason/smPy-UserGuide"